force-app/main/default/objects/Living_Situation__c.object
<CustomObject>
    <description>HMIS tracking for Prior &amp; Current Living Situation</description>
    <fields>
        <fullName>API_CLSSubsidyType__c</fullName>
        <formula>TRIM(LEFT(TEXT( Rental_Subsidy_Type__c),FIND(&quot;:&quot;, TEXT( Rental_Subsidy_Type__c ))-1))</formula>
        <label>API_CLSSubsidyType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CurrentLivingSituation__c</fullName>
        <formula>TRIM(LEFT(TEXT(Situation__c),FIND(&quot;:&quot;, TEXT(Situation__c))-1))</formula>
        <label>API_CurrentLivingSituation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LeaseOwn60Day__c</fullName>
        <formula>TRIM(LEFT(TEXT(LeaseOwn60Day__c),FIND(&quot;:&quot;, TEXT(LeaseOwn60Day__c))-1))</formula>
        <label>API_LeaseOwn60Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LeaveSituation14Days__c</fullName>
        <formula>TRIM(LEFT(TEXT(LeaveSituation14Days__c),FIND(&quot;:&quot;, TEXT(LeaveSituation14Days__c))-1))</formula>
        <label>API_LeaveSituation14Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LengthofStay__c</fullName>
        <formula>TRIM(LEFT(TEXT( hmisLength_of_Stay__c ),FIND(&quot;:&quot;, TEXT( hmisLength_of_Stay__c))-1))</formula>
        <label>API_LengthofStay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LocationDetails__c</fullName>
        <formula>If(NOT(ISBLANK( LocationDetails__c )),( LocationDetails__c ),&quot;&quot;)</formula>
        <label>API_LocationDetails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_MovedTwoOrMore__c</fullName>
        <formula>TRIM(LEFT(TEXT(MovedTwoOrMore__c),FIND(&quot;:&quot;, TEXT(MovedTwoOrMore__c))-1))</formula>
        <label>API_MovedTwoOrMore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ResourcesToObtain__c</fullName>
        <formula>TRIM(LEFT(TEXT(ResourcesToObtain__c),FIND(&quot;:&quot;, TEXT(ResourcesToObtain__c))-1))</formula>
        <label>API_ResourcesToObtain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Situation__c</fullName>
        <formula>TRIM(LEFT(TEXT( Situation__c ),FIND(&quot;:&quot;, TEXT(  Situation__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Situation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SubsequentResidence__c</fullName>
        <formula>TRIM(LEFT(TEXT(SubsequentResidence__c),FIND(&quot;:&quot;, TEXT(SubsequentResidence__c))-1))</formula>
        <label>API_SubsequentResidence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VarifiedBy__c</fullName>
        <formula>If(NOT(ISBLANK(VerifiedBy__c )),(VerifiedBy__c),&quot;&quot;)</formula>
        <label>API_VarifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformationDate__c</fullName>
        <formula>If(NOT(ISBLANK(Information_Date__c)),

TEXT(YEAR( Information_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(Information_Date__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Information_Date__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InformationDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Date__c</fullName>
        <label>Information Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institutional_Stayed_Less_Than_90_Day__c</fullName>
        <label>Institutional Stayed Less Than 90 Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaseOwn60Day__c</fullName>
        <label>Lease Own 60 Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeaveSituation14Days__c</fullName>
        <label>Leave Situation 14 Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocationDetails__c</fullName>
        <label>LocationDetails</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_homeless_past_3_years__c</fullName>
        <inlineHelpText>Total number of months homeless on the street, in ES, or SH in the past three years</inlineHelpText>
        <label>Months Homeless Past Three Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>101</fullName>
                    <label>One month (this time is the first month)</label>
                </value>
                <value>
                    <fullName>102</fullName>
                    <label>2 Months</label>
                </value>
                <value>
                    <fullName>103</fullName>
                    <label>3 Months</label>
                </value>
                <value>
                    <fullName>104</fullName>
                    <label>4 Months</label>
                </value>
                <value>
                    <fullName>105</fullName>
                    <label>5 Months</label>
                </value>
                <value>
                    <fullName>106</fullName>
                    <label>6 Months</label>
                </value>
                <value>
                    <fullName>107</fullName>
                    <label>7 Months</label>
                </value>
                <value>
                    <fullName>108</fullName>
                    <label>8 Months</label>
                </value>
                <value>
                    <fullName>109</fullName>
                    <label>9 Months</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>10 Months</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>11 Months</label>
                </value>
                <value>
                    <fullName>112</fullName>
                    <label>12 Months</label>
                </value>
                <value>
                    <fullName>113</fullName>
                    <label>More than 12 months</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn’t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MovedTwoOrMore__c</fullName>
        <label>Moved Two or More</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Living Situations</relationshipLabel>
        <relationshipName>Living_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipLabel>Living Situations</relationshipLabel>
        <relationshipName>Living_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental_Subsidy_Type__c</fullName>
        <label>Rental Subsidy Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisRentalSubsidyTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResourcesToObtain__c</fullName>
        <label>Resources to Obtain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SituationCategory__c</fullName>
        <label>Situation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3.917</fullName>
                    <label>Prior Living Situation</label>
                </value>
                <value>
                    <fullName>4.12</fullName>
                    <label>Current Living Situation</label>
                </value>
                <value>
                    <fullName>3.12</fullName>
                    <label>Destination</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situation__c</fullName>
        <description>Dependent on the Living Situation Type, the sub type is used to track the specific response for HMIS.</description>
        <label>Situation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisLivingSituationOptionList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stay_less_than_7_nights__c</fullName>
        <label>Stay less than 7 nights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsequentResidence__c</fullName>
        <label>Subsequent Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Situation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Situation</fullName>
                </value>
                <value>
                    <fullName>Institutional Situations</fullName>
                </value>
                <value>
                    <fullName>Temporary Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Permanent Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VerifiedBy__c</fullName>
        <label>VerifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisChronic_Homelessness__c</fullName>
        <inlineHelpText>Regardless of where they stayed last night, number of times the client has been on the streets, in ES, or SH in the past three years including today</inlineHelpText>
        <label>Chronic Homelessness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Two Times</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Three Times</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Four or more times</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Client doesn&apos;t know</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Data not collected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisHomeless_Episode_Start_Date__c</fullName>
        <inlineHelpText>Approximate date this episode of homelessness started: ([date field])</inlineHelpText>
        <label>Homeless Episode Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hmisLength_of_Stay__c</fullName>
        <label>Length of Stay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisLengthOfStay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisNight_before_streets_ES_or_SH__c</fullName>
        <description>On the night before did you stay on the streets, ES, or SH</description>
        <label>Night before streets, ES, or SH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisTimes_Homeless_Past_Three_Years__c</fullName>
        <label>Times Homeless Past Three Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisTimesHomelessPastThreeYears</valueSetName>
        </valueSet>
    </fields>
    <label>Living Situation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Living Situation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Living Situations</pluralLabel>
    <recordTypes>
        <fullName>Current_Living_Situation</fullName>
        <active>true</active>
        <label>Current Living Situation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>